# dexter

./: .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.yaml  opencode.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/release-notes/: v0.0.0.md
.opencode/agents/: analyze.md  critic.md  imagegen.md  joint_props.md  orchestrator.md  physics_spec.md  placement.md
configs/: base.yaml
docs/: README.md  package-lock.json  package.json  styles.css  theme.config.tsx
docs/components/: Footer.tsx
docs/pages/: _app.tsx  _meta.json  index.mdx
docs/pages/architecture/: _meta.json  agentic-loop.mdx  agents.mdx  intermediate-representation.mdx  overview.mdx  schemas.mdx  tools.mdx
docs/pages/contributing/: _meta.json  extending-pipeline.mdx  local-development.mdx  overview.mdx  project-structure.mdx  schemas-and-validation.mdx  tool-script-standards.mdx
docs/pages/getting-started/: _meta.json  configuration.mdx  installation.mdx  pipeline-run.mdx  requirements.mdx  running.mdx
docs/pages/sample-runs/: _meta.json  (+3 more)
orchestrator/: run_pipeline.py
schemas/: assembly.schema.json  component_dims.schema.json  critic.schema.json  joint_props.schema.json  parts.schema.json  physics_spec.schema.json  place_assets.schema.json  placement_hints.schema.json  placement_init.schema.json  render_views.schema.json
tool_scripts/: apply_critic.py  apply_physics_spec.py  blender_assemble.py  blender_export_meshes.py  blender_export_usd.py  blender_extract_scene.py  blender_measure_glbs.py  blender_place_assets.py  blender_render_views.py  blender_simplify_meshes.py  build_component_prompts.py  build_urdf.py  common.py  compute_placement_scales.py  compute_world_dims.py  fal_image_to_3d.py  generate_components.py  initialize_placement.py  openai_imagegen.py  place_assets_to_assembly.py  update_placement.py  validate_json.py  view_urdf.py
