[project]
name = "dexter"
version = "0.0.0"
description = "Agentic pipeline: product photo → articulated 3D asset (USD) for robotic simulation"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Aakash Varma" }]
keywords = ["robotics", "simulation", "usd", "3d", "agents", "isaac-sim", "articulated-assets"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fal_client",
    "openai",
    "requests",
    "jsonschema",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/aakashvarma/dexter"
Documentation = "https://github.com/aakashvarma/dexter/tree/main/docs"
Repository = "https://github.com/aakashvarma/dexter"
Issues = "https://github.com/aakashvarma/dexter/issues"
Changelog = "https://github.com/aakashvarma/dexter/blob/main/CHANGELOG.md"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["tool_scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "N",   # pep8-naming
]
ignore = [
    "N802",  # Blender RNA operator names (e.g. usd_export)
    "N806",  # allow math symbols in tight geometry blocks when needed
]

[tool.ruff.lint.per-file-ignores]
"tool_scripts/blender_*.py" = ["E402", "F401"]  # path bootstrap before bpy/common; bpy only in Blender

[tool.ruff.lint.isort]
known-first-party = ["common"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
